sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:7: error: not found: value j
    for (j <- 1 to j){
                   ^