sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  
  for (i <- 1 to getValueCount()){
    
    var v=0
    for (j <- 1 to j){
      if(isSmaller(j,v)){v=j}
    }
    swap(v,i) 
  }
}